--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "simple blog web application",
   "main": "index.js",
-  
   "scripts": {
     "start": "npx nodemon index.js"
   },
   "author": "hamza abdikadir",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
@@ -18,4 +18,3 @@
     "source-map-support": "^0.5.21"
   }
 }
-  
