--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple blog web application",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index.js"
+    "start": " nodemon index.js"
   },
   "author": "hamza abdikadir",
   "license": "ISC",
@@ -12,16 +12,20 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "escape-html": "^1.0.3",
     "express": "^4.17.2",
+    "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
     "fs": "0.0.1-security",
+    "helmet": "^5.0.2",
+    "helmet-csp": "^3.4.0",
+    "http": "^0.0.1-security",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
-    "readline": "^1.3.0",
-    "source-map-support": "^0.5.21"
+    "readline": "^1.3.0"
   }
 }
